add oled support

--- a/software/platformio.ini
+++ b/software/platformio.ini
@@ -17,3 +17,6 @@ board_build.filesystem = spiffs
 lib_deps = 
 	adafruit/Adafruit seesaw Library@^1.7.9
 	seeed-studio/Grove - LCD RGB Backlight@^1.0.2
+	; adafruit/Adafruit SSD1306@^2.5.14
+	; adafruit/Adafruit GFX Library@^1.12.1
+	olikraus/U8g2@^2.36.5
